// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/posts/linkedin PublishPost post with a link works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:undefined",
    "url": "https://www.linkedin.com/feed/update/undefined",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images keeps the link if media is present 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:7033941638934642689",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:7033941639408599040",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images uploads and posts media 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:7033941618281914369",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:7033941619175292928",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost text-only post works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:undefined",
    "url": "https://www.linkedin.com/feed/update/undefined",
  },
}
`;

exports[`social-media/publish-post/linkedin PublishPost error cases invalid profileId ends in not found error 1`] = `
Err {
  "error": "MappedHTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Forbidden\\",
  \\"detail\\": \\"Field Value validation failed in REQUEST_BODY: Data Processing Exception while processing fields [/owner]\\",
  \\"original\\": {
    \\"serviceErrorCode\\": 100,
    \\"message\\": \\"Field Value validation failed in REQUEST_BODY: Data Processing Exception while processing fields [/owner]\\",
    \\"status\\": 403
  }
}
AST Path: definitions[0].statements[3].responseHandlers[1].statements[1]
Original Map Location: Line 58, column 7",
}
`;
